Fix max-width of channel image on small size screens

--- a/public/assets/sass/layouts/_channel.scss
+++ b/public/assets/sass/layouts/_channel.scss
@@ -230,6 +230,10 @@ body.channel {
               display: flex;
               flex-direction: column;
               justify-content: center;
+
+              a img {
+                max-width: 100%;
+              }
             }
           }
 
